test/cli/test-fail/missing-resource/kyverno-test.yaml
name: test-simple
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - missing
  result: pass
  rule: validate-image-tag
