test/cli/test-fail/missing-resource/test.yaml
name: test-simple
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: validate-image-tag
    resource: missing
    result: pass
